# skyweave_shape_controller

./: CMakeLists.txt  README.md
include/: gamma_surface.hpp  hover_controller.hpp  inverse_kinematics.hpp  shape_controller.hpp  skyweave_sim.hpp  state_estimator.hpp  thrusters.hpp
src/: gamma_surface.cpp  inverse_kinematics.cpp  shape_controller.cpp  skyweave_link_tracker.cpp  skyweave_sim.cpp  state_estimator.cpp  thrusters.cpp
src/include/: inverse_kinematics.hpp  state_estimator.hpp
